Fixed tag width, single doc alignment fix

--- a/src/assets/stylesheets/components/_single-document.scss
+++ b/src/assets/stylesheets/components/_single-document.scss
@@ -14,6 +14,7 @@
             display: flex;
             flex: 1 1 auto;
             justify-content: space-between;
+            width: 100%;
 
             .document__from-date-container__from {
                 flex: 1 1 auto;
